--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,15 +35,22 @@ dependencies:
   google_fonts: ^6.1.0
   flutter_svg: ^2.0.9
   flutter_screenutil: ^5.9.3
+  flutter_form_builder: ^10.1.0
   intl: ^0.20.2
   syncfusion_flutter_datepicker: ^30.1.38
+  flutter_launcher_icons: ^0.13.1
+  image_picker: ^1.0.4
+  uuid: ^4.2.1
+
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  go_router: ^15.2.4
+  go_router: ^16.0.0
   shimmer_animation: ^2.2.2
+  form_builder_validators: ^11.2.0
+
 
 dev_dependencies:
   flutter_test:
@@ -97,3 +104,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/logo.png"
