--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,14 @@ dependencies:
   go_router: ^16.0.0
   shimmer_animation: ^2.2.2
   form_builder_validators: ^11.2.0
+  url_launcher: ^6.1.14
+  timelines_plus: ^1.0.7
+  flutter_local_notifications: ^19.3.0
+  timezone: ^0.10.1
+  shared_preferences: ^2.5.3
+  dio: ^5.8.0+1
+  awesome_snackbar_content: ^0.1.6
+
 
 
 dev_dependencies:
